@@ -1,5 +1,9 @@
 2007-03-25  Inge Wallin  <ingwa@c83-252-238-97.bredband.comhem.se>
 
+	Qt3 -> Qt4
+	* dialogs/KCConfigSubtypePiePage.cc (KCConfigSubtypePiePage): 
+	Q3ButtonGroup -> QGroupBox
+
 	Qt3 -> Qt4: Remove all remaining Q3GroupBox:
 	* dialogs/KCConfigSubtypePage.cc (KChartBarSubTypeChartPage),
 	(KChartLineSubTypeChartPage) 
